frontend: fix step labels sometimes cut off in add-account view
In German the g of erledigt was cut off.

--- a/frontends/web/src/components/steps/steps.module.css
+++ b/frontends/web/src/components/steps/steps.module.css
@@ -11,7 +11,6 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     margin-bottom: var(--space-half);
-    overflow: hidden;
     position: relative;
     width: 100%;
 }
